crates/icydb-core/tests/ui/db/access_module_private.rs
use icydb_core::db::access::AccessPlan;

fn main() {}
